<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="-22dp"
        android:src="@drawable/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/manIcon"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_3"
        app:layout_constraintEnd_toEndOf="@id/registerText"
        app:layout_constraintStart_toStartOf="@id/registerText"
        app:layout_constraintTop_toBottomOf="@id/registerText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailField"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design"
        android:backgroundTint="#d5b6fb"
        android:hint="@string/email"
        android:padding="5dp"
        android:paddingStart="100dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/manIcon" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginStart="33dp"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toBottomOf="@id/emailField"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintTop_toTopOf="@id/emailField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameField"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:backgroundTint="#d5b6fb"
        android:hint="@string/username"
        android:padding="5dp"
        android:paddingStart="100dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginStart="33dp"
        android:src="@drawable/img_5"
        app:layout_constraintBottom_toBottomOf="@id/usernameField"
        app:layout_constraintStart_toStartOf="@id/usernameField"
        app:layout_constraintTop_toTopOf="@id/usernameField" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordField"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:backgroundTint="#d5b6fb"
        android:hint="@string/password"
        android:padding="5dp"
        android:paddingStart="100dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameField" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:layout_marginStart="33dp"
        android:src="@drawable/img_6"
        app:layout_constraintBottom_toBottomOf="@id/passwordField"
        app:layout_constraintStart_toStartOf="@id/passwordField"
        app:layout_constraintTop_toTopOf="@id/passwordField" />
    
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="370dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        android:background="@drawable/button_design"
        app:layout_constraintStart_toStartOf="@id/emailField"
        app:layout_constraintEnd_toEndOf="@id/emailField"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="23sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>